--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: scala
+
 jdk:
   - openjdk8
+  - oraclejdk8
+
 scala:
-   - 2.11.11
+  - 2.11.12
+
+env:
+  matrix:
+    - PROFILE=databricks
+    - PROFILE=cloudera
+
+script: "mvn clean install -P ${PROFILE}"
+
+
