--- a/pom.xml
+++ b/pom.xml
@@ -436,22 +436,7 @@
     </profiles>
 
     <dependencies>
-        <!-- Neo4j -->
-
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-cypher-frontend-3.3</artifactId>
-            <version>${dep.neo4j.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.neo4j.driver</groupId>
-            <artifactId>neo4j-java-driver</artifactId>
-            <version>${dep.neo4j.driver.version}</version>
-        </dependency>
-
         <!-- Scala -->
-
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
@@ -464,90 +449,7 @@
             <version>${project.scala.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.typelevel</groupId>
-            <artifactId>cats_${project.scala.binary.version}</artifactId>
-            <version>${dep.cats.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.atnos</groupId>
-            <artifactId>eff_${project.scala.binary.version}</artifactId>
-            <version>${dep.eff.version}</version>
-        </dependency>
-
-        <!-- Spark -->
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_${project.scala.binary.version}</artifactId>
-            <version>${dep.spark.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${project.scala.binary.version}</artifactId>
-            <version>${dep.spark.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-catalyst_${project.scala.binary.version}</artifactId>
-            <version>${dep.spark.version}</version>
-        </dependency>
-
-        <!-- Utils -->
-
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>ammonite_${project.scala.binary.version}.11</artifactId>
-            <version>${dep.ammonite.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>ammonite-ops_${project.scala.binary.version}</artifactId>
-            <version>${dep.ammonite.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.s1ck</groupId>
-            <artifactId>gdl</artifactId>
-            <version>${dep.gdl.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.nicolasstucki</groupId>
-            <artifactId>multisets_${project.scala.binary.version}</artifactId>
-            <version>${dep.multiset.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>sourcecode_${project.scala.binary.version}</artifactId>
-            <version>${dep.sourcecode.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-core_${project.scala.binary.version}</artifactId>
-            <version>${dep.circe.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-generic_${project.scala.binary.version}</artifactId>
-            <version>${dep.circe.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-parser_${project.scala.binary.version}</artifactId>
-            <version>${dep.circe.version}</version>
-        </dependency>
-
         <!-- Tests -->
-
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-cypher-frontend-3.3</artifactId>
@@ -610,5 +512,20 @@
             <version>${dep.mockito.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.s1ck</groupId>
+            <artifactId>gdl</artifactId>
+            <version>${dep.gdl.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.nicolasstucki</groupId>
+            <artifactId>multisets_${project.scala.binary.version}</artifactId>
+            <version>${dep.multiset.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
