--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dep.junit.version>4.12</dep.junit.version>
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
-        <dep.neo4j.version>3.3.0-rc1</dep.neo4j.version>
+        <dep.neo4j.version>3.3.1</dep.neo4j.version>
         <dep.netty.version>4.1.8.Final</dep.netty.version>
         <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
         <dep.scalatest.version>3.0.3</dep.scalatest.version>
