Add missing license headers and add tck module to parent

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>caps-core</module>
         <module>caps-spark</module>
+        <module>caps-tck</module>
     </modules>
 
     <properties>
