--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,9 @@
         <dep.eff.version>4.5.0</dep.eff.version>
         <dep.gdl.version>0.3.1</dep.gdl.version>
         <dep.hadoop.version>2.7.0</dep.hadoop.version>
-        <dep.junit.version>4.12</dep.junit.version>
+        <dep.junit.version>5.0.2</dep.junit.version>
+        <dep.junit.platform.version>1.0.2</dep.junit.platform.version>
+        <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
         <dep.neo4j.version>3.3.1</dep.neo4j.version>
@@ -273,6 +275,24 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Run scala tests with junit 4 with junit 5 vintage + junit 5 in tck  -->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${dep.junit.platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>${dep.junit.vintage.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <!-- setup ammonite repl runner -->
@@ -510,29 +530,8 @@
 
         <dependency>
             <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-launcher</artifactId>
-            <version>1.0.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${dep.junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.0.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.2</version>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${dep.junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
 
