Move each different test factory to own class
This makes the surefire plugin not group all tests into one bucket,
which is nice because it'll list numbers for each group of tests.

- Moves the junit5 engine dependency to the surefire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,11 @@
                         <version>${dep.junit.platform.version}</version>
                     </dependency>
                     <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${dep.junit.version}</version>
+                    </dependency>
+                    <dependency>
                         <groupId>org.junit.vintage</groupId>
                         <artifactId>junit-vintage-engine</artifactId>
                         <version>${dep.junit.vintage.version}</version>
