Add conversion from PropertyGraph to CAPSScanGraph

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <dep.hadoop.version>2.7.0</dep.hadoop.version>
         <dep.junit.version>5.0.2</dep.junit.version>
         <dep.junit.platform.version>1.0.2</dep.junit.platform.version>
+        <dep.junit.jupiter.version>5.0.2</dep.junit.jupiter.version>
         <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
         <dep.mockito.version>1.10.19</dep.mockito.version>
         <dep.multiset.version>0.4</dep.multiset.version>
@@ -290,7 +291,7 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${dep.junit.version}</version>
+                        <version>${dep.junit.jupiter.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.junit.vintage</groupId>
