--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,11 @@
                         <version>${dep.junit.vintage.version}</version>
                     </dependency>
                 </dependencies>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
 
             <!-- setup ammonite repl runner -->
