--- a/caps-trees/pom.xml
+++ b/caps-trees/pom.xml
@@ -10,29 +10,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>caps-api</artifactId>
+    <artifactId>caps-trees</artifactId>
 
-    <name>Cypher for Apache Spark - API</name>
+    <name>Cypher for Apache Spark - Trees</name>
 
     <properties>
         <project.rootdir>${project.parent.basedir}</project.rootdir>
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.typelevel</groupId>
-            <artifactId>cats_${project.scala.binary.version}</artifactId>
-            <version>${dep.cats.version}</version>
-        </dependency>
-
-        <!--CAPS Module-->
-        <dependency>
-            <groupId>org.opencypher</groupId>
-            <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
-        </dependency>
-
     </dependencies>
 
 </project>
