--- a/caps-cora/pom.xml
+++ b/caps-cora/pom.xml
@@ -23,7 +23,7 @@
         <!--CAPS Module-->
         <dependency>
             <groupId>org.opencypher</groupId>
-            <artifactId>caps-core</artifactId>
+            <artifactId>caps-logical</artifactId>
             <version>${parent.version}</version>
         </dependency>
 
