--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <modules>
         <module>caps-api</module>
         <module>caps-trees</module>
-        <module>caps-core</module>
+        <module>caps-logical</module>
         <module>caps-spark</module>
         <module>caps-tck</module>
         <module>caps-ir</module>
