--- a/caps-logical/pom.xml
+++ b/caps-logical/pom.xml
@@ -10,9 +10,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>caps-core</artifactId>
+  <artifactId>caps-logical</artifactId>
 
-  <name>Cypher for Apache Spark - Core</name>
+  <name>Cypher for Apache Spark - Logical Query Planning for Cypher</name>
 
   <properties>
     <project.rootdir>${project.parent.basedir}</project.rootdir>
