--- a/caps-tck/pom.xml
+++ b/caps-tck/pom.xml
@@ -24,6 +24,14 @@
         <!-- Test -->
         <dependency>
             <groupId>org.opencypher</groupId>
+            <artifactId>caps-api</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opencypher</groupId>
             <artifactId>caps-cora</artifactId>
             <version>${project.parent.version}</version>
             <scope>test</scope>
