Reorganize tests to appropriate modules

--- a/caps-ir/pom.xml
+++ b/caps-ir/pom.xml
@@ -41,6 +41,16 @@
             <version>${dep.eff.version}</version>
         </dependency>
 
+        <!-- Tests -->
+        
+        <dependency>
+            <groupId>org.opencypher</groupId>
+            <artifactId>caps-api</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
