--- a/caps-logical/pom.xml
+++ b/caps-logical/pom.xml
@@ -32,6 +32,24 @@
       <version>${parent.version}</version>
     </dependency>
 
+    <!-- Tests -->
+
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>caps-api</artifactId>
+      <version>${parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>caps-ir</artifactId>
+      <version>${parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
