--- a/caps-spark/pom.xml
+++ b/caps-spark/pom.xml
@@ -56,6 +56,14 @@
 
         <dependency>
             <groupId>org.opencypher</groupId>
+            <artifactId>caps-ir</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opencypher</groupId>
             <artifactId>caps-cora</artifactId>
             <version>${parent.version}</version>
             <type>test-jar</type>
