--- a/caps-cora/pom.xml
+++ b/caps-cora/pom.xml
@@ -81,6 +81,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.opencypher</groupId>
+            <artifactId>caps-ir</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
