Workaround for IntelliJ ScalaTest bug
https://youtrack.jetbrains.com/issue/SCL-13184

--- a/caps-api/pom.xml
+++ b/caps-api/pom.xml
@@ -33,6 +33,15 @@
             <version>${parent.version}</version>
         </dependency>
 
+        <!-- Workaround for https://youtrack.jetbrains.com/issue/SCL-13184 -->
+        <dependency>
+            <groupId>org.opencypher</groupId>
+            <artifactId>caps-trees</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
