--- a/caps-spark/pom.xml
+++ b/caps-spark/pom.xml
@@ -69,5 +69,15 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+
+        <!-- Workaround for https://youtrack.jetbrains.com/issue/SCL-13184 -->
+        <dependency>
+            <groupId>org.opencypher</groupId>
+            <artifactId>caps-trees</artifactId>
+            <version>${parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
