--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
         <plugin.maven-compiler.version>3.5.1</plugin.maven-compiler.version>
         <plugin.maven-jar.version>3.0.2</plugin.maven-jar.version>
         <plugin.maven-resources.version>2.7</plugin.maven-resources.version>
+        <plugin.maven-scala.version>3.2.1</plugin.maven-scala.version>
+        <plugin.maven-scalastyle.version>0.8.0</plugin.maven-scalastyle.version>
+        <plugin.maven-scalatest.version>1.0</plugin.maven-scalatest.version>
         <plugin.maven-shade.version>2.4.3</plugin.maven-shade.version>
-        <plugin.scala-maven.version>3.2.1</plugin.scala-maven.version>
-        <plugin.scalastyle-maven.version>0.8.0</plugin.scalastyle-maven.version>
-        <plugin.scalatest-maven.version>1.0</plugin.scalatest-maven.version>
-        <plugin.surefire-maven.version>2.20.1</plugin.surefire-maven.version>
+        <plugin.maven-surefire.version>2.20.1</plugin.maven-surefire.version>
 
         <!-- Used dependencies -->
         <dep.ammonite.version>1.0.1-6-6d2db3a</dep.ammonite.version>
@@ -55,7 +55,7 @@
         <dep.neo4j.version>3.4.0-alpha05</dep.neo4j.version>
         <dep.netty.version>4.1.8.Final</dep.netty.version>
         <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
-        <dep.scalatest.version>3.0.3</dep.scalatest.version>
+        <dep.scalatest.version>3.0.4</dep.scalatest.version>
         <dep.sourcecode.version>0.1.2</dep.sourcecode.version>
         <dep.spark.version>2.2.0</dep.spark.version>
     </properties>
@@ -106,7 +106,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>${plugin.scala-maven.version}</version>
+                <version>${plugin.maven-scala.version}</version>
                 <executions>
                     <execution>
                         <id>scala-compile</id>
@@ -175,7 +175,7 @@
             <plugin>
                 <groupId>org.scalastyle</groupId>
                 <artifactId>scalastyle-maven-plugin</artifactId>
-                <version>${plugin.scalastyle-maven.version}</version>
+                <version>${plugin.maven-scalastyle.version}</version>
                 <configuration>
                     <verbose>false</verbose>
                     <failOnViolation>true</failOnViolation>
@@ -286,7 +286,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${plugin.surefire-maven.version}</version>
+                <version>${plugin.maven-surefire.version}</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
@@ -296,7 +296,7 @@
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
-                <version>${plugin.scalatest-maven.version}</version>
+                <version>${plugin.maven-scalatest.version}</version>
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
